--- a/frontend/leetcode-game/package.json
+++ b/frontend/leetcode-game/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "monaco-themes": "^0.4.4",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "eslint": "^8",
