--- a/Downloads/hackthe6ix-judge0/ht6-project/package.json
+++ b/Downloads/hackthe6ix-judge0/ht6-project/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "axios": "^1.7.3",
+    "monaco-editor": "^0.50.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
