--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "monaco-editor": "^0.50.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/node": "20.14.14",
