--- a/frontend/leetcode-game/package.json
+++ b/frontend/leetcode-game/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "react-progress": "^0.0.12",
     "react-progress-bar": "^0.1.0",
     "react-select": "^5.8.0"
