--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.3",
     "monaco-editor": "^0.50.0",
     "next": "14.2.5",
